--- a/web/css/index_game_master_style.css
+++ b/web/css/index_game_master_style.css
@@ -1,3 +1,55 @@
 body{
-    background-color: blue;
+    background-color: #2c3e50;
+    background-image: url("../img/wallpaper_mj.png");
+    background-attachment: fixed;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+}
+h1
+{
+    font-size: 2.2em;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ecf0f1;
+    text-shadow: 2px 2px #2c3e50;
+    text-align: center;
+}
+#header
+{
+    border-bottom: 4px solid #ecf0f1;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ecf0f1;
+    text-shadow: 1px 1px #2c3e50;
+    font-size: 0.8em;
+    text-align: center;
+}
+.userdata
+{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ecf0f1;
+    text-shadow: 1px 1px #2c3e50;
+}
+.userdata input
+{
+    font-family: Arial, Helvetica, sans-serif;
+    width: 50px;
+    text-align: center;
+    background-color: #ecf0f1;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+.titre input
+{
+    width: 100px;
+}
+
+td
+{
+    border-right: 1px solid #ecf0f1;
+}
+.armor
+{
+    border-right: none;
 }
