--- a/web/css/index_user_style.css
+++ b/web/css/index_user_style.css
@@ -1,3 +1,33 @@
-body{
-    background-color: red;
+body
+{
+    background-color: #2c3e50;
+    background-image: url("../img/wallpaper_pj.jpg");
+}
+h1
+{
+    font-size: 3.5em;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ecf0f1;
+    text-shadow: 4px 4px #2c3e50;
+    text-align: center;
+}
+fieldset
+{
+    border-color: #ecf0f1;
+    color: #ecf0f1;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 1px 1px #2c3e50;
+    font-size: 1.2em;
+
+}
+legend
+{
+    font-size: 1.4em;
+}
+ul
+{
+    list-style: none;
 }
