--- a/web/css/index_user_style.css
+++ b/web/css/index_user_style.css
@@ -3,45 +3,126 @@ body
     background-color: #2c3e50;
     background-image: url("../img/wallpaper_pj.jpg");
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: space-around;
 }
-h1
-{
-    font-size: 3.5em;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #ecf0f1;
-    text-shadow: 4px 4px #2c3e50;
-    text-align: center;
-}
+
 fieldset
 {
+    padding: 0px;
     border-color: #ecf0f1;
     color: #ecf0f1;
     width: 35%;
-    margin-left: auto;
-    margin-right: auto;
     font-family: Arial, Helvetica, sans-serif;
     text-shadow: 1px 1px #2c3e50;
-    font-size: 1.2em;
+    font-size: 1.4em;
+    display: block;
+    border-bottom: none;
+    border-radius: 5px;
 
+}
+#baseStats li
+{
+    border-bottom: 2px solid #ecf0f1;
+
+}
+#nomList
+{
+    border-top: 2px solid #ecf0f1;
+}
+
+fieldset ul
+{
+    margin-bottom: 0px;
+}
+
+fieldset ul li
+{
+    text-align: center;
+}
+
+
+#baseStats span
+{
+    color: #2ECC71;
+    text-shadow: 1px 1px #2c3e50;
+    font-weight: bold;
+}
+
+#state span
+{
+ font-weight: bold;
+}
+
+#myImgContainer
+{
+    display: flex;
+    justify-content: center;
+}
+#state
+{
+    text-align: center;
 }
 legend
 {
     font-size: 1.4em;
+    text-align: center;
 }
+
+
+progress#myHp
+{
+   -webkit-appearance: none;
+   appearance: none;
+}
+progress#myHp::-webkit-progress-value
+{
+    background: #00B16A;
+    border-radius: 5px;
+}
+
+progress#myMana
+{
+   -webkit-appearance: none;
+   appearance: none;
+}
+progress#myMana::-webkit-progress-value
+{
+    background:#3A539B;
+    border-radius: 5px;
+}
+
+
+.infosAllies
+{
+    display: flex;
+    justify-content: space-between;
+    width: 330px;
+    margin-bottom: 30px;
+}
+
+.infosAlliesNom
+{
+    border: 2px solid #ecf0f1;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+
 ul
 {
     list-style: none;
+    padding-left: 0px;
 }
-li
-{
-    font-size: 1.2em;
-    color: #ecf0f1;
-    font-family: Arial, Helvetica, sans-serif;
-}
+
 progress.hpbarre
 {
    -webkit-appearance: none;
    appearance: none;
+   margin-left: 30%;
 }
 progress.hpbarre::-webkit-progress-value
 {
@@ -52,6 +133,7 @@ progress.hpbarre::-webkit-progress-value
 progress.manabarre {
    -webkit-appearance: none;
    appearance: none;
+   margin-left: 30%;
 
 
 }
@@ -59,4 +141,20 @@ progress.manabarre::-webkit-progress-value
 {
     background:#3A539B;
     border-radius: 5px;
+}
+
+
+
+#otherPlayerName
+{
+    font-size: 1.4em;
+    text-align: center;
+}
+#otherPlayers
+{
+    font-family: Arial, Helvetica, sans-serif;
+    float: left;
+    color: #ecf0f1;
+
+    
 }
