--- a/web/css/index_user_style.css
+++ b/web/css/index_user_style.css
@@ -17,15 +17,21 @@ fieldset
     font-family: Arial, Helvetica, sans-serif;
     text-shadow: 1px 1px #2c3e50;
     font-size: 1.4em;
-    display: block;
     border-bottom: none;
     border-radius: 5px;
-
+    height: 100%;
+    text-align: center;
 }
 #baseStats li
 {
     border-bottom: 2px solid #ecf0f1;
 
+}
+
+fieldset p
+{
+    font-style: italic;
+    margin-top: 0px;
 }
 #nomList
 {
@@ -37,9 +43,16 @@ fieldset ul
     margin-bottom: 0px;
 }
 
+#myarmor
+{
+    color: #F39C12;
+}
+
 fieldset ul li
 {
     text-align: center;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 
@@ -66,7 +79,7 @@ fieldset ul li
 }
 legend
 {
-    font-size: 1.4em;
+    font-size: 1.8em;
     text-align: center;
 }
 
@@ -122,7 +135,8 @@ progress.hpbarre
 {
    -webkit-appearance: none;
    appearance: none;
-   margin-left: 30%;
+   margin-left: 10%;
+   width: 13em;
 }
 progress.hpbarre::-webkit-progress-value
 {
@@ -133,7 +147,8 @@ progress.hpbarre::-webkit-progress-value
 progress.manabarre {
    -webkit-appearance: none;
    appearance: none;
-   margin-left: 30%;
+   margin-left: 10%;
+   width: 13em;
 
 
 }
@@ -157,4 +172,11 @@ progress.manabarre::-webkit-progress-value
     color: #ecf0f1;
 
     
+}
+.stats
+{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    margin-top: 15px;
 }
