--- a/web/css/index_game_master_style.css
+++ b/web/css/index_game_master_style.css
@@ -2,24 +2,25 @@ body{
     background-color: #2c3e50;
     background-image: url("../img/wallpaper_mj.png");
     background-attachment: fixed;
-    margin-left: auto;
-    margin-right: auto;
-    width: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 h1
 {
-    font-size: 2.2em;
+    font-size: 3em;
     font-family: Arial, Helvetica, sans-serif;
     color: #ecf0f1;
     text-shadow: 2px 2px #2c3e50;
-    text-align: center;
+    padding-bottom: 40px;
 }
 #header
 {
     font-family: Arial, Helvetica, sans-serif;
     color: #ecf0f1;
     text-shadow: 1px 1px #2c3e50;
-    font-size: 0.8em;
+    font-size: 1.4em;
     text-align: center;
 }
 .userdata
@@ -36,19 +37,36 @@ h1
     background-color: #ecf0f1;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 1px solid #95a5a6;
     border-radius: 4px;
 }
 .titre input
 {
     width: 150px;
+    font-size: 1em;
 }
 
 td
 {
-    border-right: 1px solid #ecf0f1;
+    border-right: 2px solid #95a5a6;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    font-size: 1.2em;
 }
 .armor
 {
     border-right: none;
+}
+.smallImage
+{
+    border-right: none;
+}
+table
+{
+    border-spacing: 0px;
+}
+input
+{
+    font-size: 1.2em;
 }
