--- a/web/css/index_game_master_style.css
+++ b/web/css/index_game_master_style.css
@@ -2,10 +2,12 @@ body{
     background-color: #2c3e50;
     background-image: url("../img/wallpaper_mj.png");
     background-attachment: fixed;
+    background-position: center;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    background-repeat: no-repeat;
 }
 h1
 {
