--- a/web/css/index_game_master_style.css
+++ b/web/css/index_game_master_style.css
@@ -34,9 +34,11 @@ h1
 .userdata input
 {
     font-family: Arial, Helvetica, sans-serif;
+    color: #ecf0f1;
+    text-shadow: 1px 1px #2c3e50;
     width: 50px;
     text-align: center;
-    background-color: #ecf0f1;
+    background-color: rgba(100,100,100,0.5);;
     margin: 4px 0;
     box-sizing: border-box;
     border: 1px solid #95a5a6;
@@ -55,6 +57,7 @@ td
     padding-right: 5px;
     text-align: center;
     font-size: 1em;
+    font-weight: bold;
 }
 .armor
 {
@@ -70,5 +73,93 @@ table
 }
 input
 {
+    
     font-size: 1em;
+    font-weight: bold;
+}
+#chatEnvoyer
+{
+    font-size: 1em;
+    color: #ecf0f1;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 1px 1px #2c3e50;
+    overflow-y: scroll;
+    height: 400px;
+    width: 300px;
+    border-left: 2px solid #95a5a6;
+    border-top: 2px solid #95a5a6;
+    border-radius: 15px;
+}
+#chat
+{
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 40px;
+    
+}
+ul
+{
+    list-style: none;
+}
+#tableauChat
+{
+    display: flex;
+    justify-content: space-between;
+}
+#currentMessage
+{
+    color: #ecf0f1;
+    text-shadow: 1px 1px #2c3e50;
+    height: 100px;
+    border-radius: 10px;
+    background-color: rgba(100,100,100,0.2);
+}
+
+#bouton
+{
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10px;
+    border-radius: 5px;
+    background-color: rgba(100,100,100,0.5);
+    color: #ecf0f1;
+    text-shadow: 1px 1px #2c3e50;
+}
+
+
+
+::-webkit-scrollbar {
+  width: 14px;
+  height: 14px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 1px solid #000000;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #65c6bb;
+}
+::-webkit-scrollbar-track {
+  background: #6c7a89;
+  border: 1px solid #000000;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #95a5a6;
+}
+::-webkit-scrollbar-track:active {
+  background: #808080;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
